# linearstepper

./: README.adoc  platformio.ini
desktop-app/: Cargo.toml  README.adoc
desktop-app/src/: app_error.rs  arduino_port.rs  gui.rs  main.rs
desktop-app/ui/: appwindow.slint
firmware/: Readme.adoc  platformio.ini
firmware/lib/ArduinoStd/: ardu_algorithm.hpp
firmware/lib/TrajectoryPlanning/: TrajectoryPlanning.cpp
firmware/lib/UartProtocol/: UartProtocol.hpp
firmware/test/test_trajectory_planning/: test_trajectory_planning.cpp
lib/ArduinoStd/: result.hpp
lib/TrajectoryPlanning/: TrajectoryPlanning.cpp  TrajectoryPlanning.hpp
sim/: MovementPlanning.ipynb  c_lang_integers.py
src/: main.cpp
test/test_trajectory_planning/: test_trajectory_planning.cpp
test/test_uartprotocol/: test_uartprotocol.cpp
