[package]
name = "desktop-app"
version = "0.1.0"
authors = ["jh"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.2"
slint = "1.0"
env_logger = "0.10.1"
log = "0.4"

[build-dependencies]
slint-build = "1.0"
